tests/transpiler/x/fs/map_nested_assign.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/map_nested_assign.fs(9,39): error FS1129: The type 'Map<string,int>' does not contain a field 'inner'

/workspace/mochi/tests/transpiler/x/fs/map_nested_assign.fs(10,1): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/transpiler/x/fs/map_nested_assign.fs(10,1): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints

/workspace/mochi/tests/transpiler/x/fs/map_nested_assign.fs(11,23): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/transpiler/x/fs/map_nested_assign.fs(11,23): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints
